packages/rust-optimizer/core/src/snapshots/qwik_core__test__issue_476.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 2090
expression: output
---
==INPUT==


import { Counter } from "./counter.tsx";

export const Root = () => {
	return (
		<html>
			<head>
				<meta charset="utf-8" />
				<title>Qwik Blank App</title>
			</head>
			<body>
				<Counter initial={3} />
			</body>
		</html>
	);
};

============================= test.tsx ==

import { Counter } from "./counter.tsx";
//
export const Root = ()=>{
    return <html>
			<head>
				<meta charset="utf-8"/>
				<title>Qwik Blank App</title>
			</head>
			<body>
				<Counter initial={3}/>
			</body>
		</html>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"AACA,SAAS,OAAO,QAAQ,gBAAgB;;AAExC,OAAO,MAAM,OAAO;IACnB,QACE,KAAK;GACL,CAAC,KAAK;IACL,CAAC,KAAK,QAAQ,SAAU;IACxB,CAAC,MAAM,cAAc,EAAE,MAAM;GAC9B,EAAE,KAAK;GACP,CAAC,KAAK;IACL,CAAC,QAAQ,SAAS,IAAK;GACxB,EAAE,KAAK;EACR,EAAE;AAEJ,EAAE\"}")
== DIAGNOSTICS ==

[]
