packages/rust-optimizer/core/src/snapshots/qwik_core__test__relative_paths.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 3415
expression: output
---
============================= ../../node_modules/dep/dist/lib.mjs_App_component_div_p_button_onClick_8dWUa0cJAr4.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
//
export const App_component_div_p_button_onClick_8dWUa0cJAr4 = ()=>{
    const [store] = useLexicalScope();
    return store.count++;
};


Some("{\"version\":3,\"sources\":[\"node_modules/dep/dist/lib.mjs\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";;8DAuB0B;IACpB,MAAM,CAAC,MAAM,GAAG;IAChB,OAAO,MAAM,KAAK;AACnB\"}")
/*
{
  "origin": "../../node_modules/dep/dist/lib.mjs",
  "name": "App_component_div_p_button_onClick_8dWUa0cJAr4",
  "entry": null,
  "displayName": "lib.mjs_App_component_div_p_button_onClick",
  "hash": "8dWUa0cJAr4",
  "canonicalFilename": "lib.mjs_App_component_div_p_button_onClick_8dWUa0cJAr4",
  "path": "../../node_modules/dep/dist",
  "extension": "js",
  "parent": "App_component_AkbU84a8zes",
  "ctxKind": "function",
  "ctxName": "q-e:click",
  "captures": true,
  "loc": [
    570,
    651
  ],
  "captureNames": [
    "store"
  ]
}
*/
============================= ../../node_modules/dep/dist/lib.mjs_App_component_AkbU84a8zes.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
//
const useData = ()=>{
    return useStore({
        count: 0
    });
};
//
const q_App_component_div_p_button_onClick_8dWUa0cJAr4 = /*#__PURE__*/ qrl(()=>import("./lib.mjs_App_component_div_p_button_onClick_8dWUa0cJAr4.js"), "App_component_div_p_button_onClick_8dWUa0cJAr4");
//
export const App_component_AkbU84a8zes = ()=>{
    const store = useData();
    return /*#__PURE__*/ _jsxSorted("div", null, null, [
        /*#__PURE__*/ _jsxSorted("p", null, null, [
            "Count: ",
            _wrapProp(store, "count")
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("p", null, null, /*#__PURE__*/ _jsxSorted("button", {
            "q-e:click": q_App_component_div_p_button_onClick_8dWUa0cJAr4.w([
                store
            ])
        }, null, "Click", 2, null), 1, null)
    ], 1, "70_0");
};


Some("{\"version\":3,\"sources\":[\"node_modules/dep/dist/lib.mjs\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";;;;;MAKM,UAAU;IACf,OAAO,SAAS;QACf,OAAO;IACR;AACD;;;;yCAEyD;IACxD,MAAM,QAAQ;IACd,OAAO,WAAW,GAAG,WAAK,mBACf;QACT,WAAW,GAAG,WAAK,iBACR;YACT;sBACA;SACA;QAEF,WAAW,GAAG,WAAI,iBACP,WAAW,GAAG,WAAI;YAC3B,WAAQ;;;iBAME;KAGZ;AAEH\"}")
/*
{
  "origin": "../../node_modules/dep/dist/lib.mjs",
  "name": "App_component_AkbU84a8zes",
  "entry": null,
  "displayName": "lib.mjs_App_component",
  "hash": "AkbU84a8zes",
  "canonicalFilename": "lib.mjs_App_component_AkbU84a8zes",
  "path": "../../node_modules/dep/dist",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    299,
    772
  ]
}
*/
============================= ../../node_modules/dep/dist/lib.mjs ==

import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
//
const q_App_component_AkbU84a8zes = /*#__PURE__*/ qrl(()=>import("./lib.mjs_App_component_AkbU84a8zes.js"), "App_component_AkbU84a8zes");
//
export const App = /*#__PURE__*/ componentQrl(q_App_component_AkbU84a8zes);


Some("{\"version\":3,\"sources\":[\"node_modules/dep/dist/lib.mjs\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";AACA,SAAS,YAAY,QAA+C,iBAAiB;;;;AAUrF,OAAO,MAAM,MAAM,WAAW,GAAG,0CAuBA\"}")
============================= components/main.tsx_Local_component_jJ0v28bs0p8.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { state } from "./sibling";
//
export const Local_component_jJ0v28bs0p8 = ()=>{
    return /*#__PURE__*/ _jsxSorted("div", null, null, state, 3, "zp_0");
};


Some("{\"version\":3,\"sources\":[\"src/thing/components/main.tsx\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";;;2CAIgC;IAC/B,qBACC,WAAC,mBAAK;AAER\"}")
/*
{
  "origin": "components/main.tsx",
  "name": "Local_component_jJ0v28bs0p8",
  "entry": null,
  "displayName": "main.tsx_Local_component",
  "hash": "jJ0v28bs0p8",
  "canonicalFilename": "main.tsx_Local_component_jJ0v28bs0p8",
  "path": "components",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    118,
    161
  ]
}
*/
============================= components/main.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Local_component_jJ0v28bs0p8 = /*#__PURE__*/ qrl(()=>import("./main.tsx_Local_component_jJ0v28bs0p8.js"), "Local_component_jJ0v28bs0p8");
//
export const Local = /*#__PURE__*/ componentQrl(q_Local_component_jJ0v28bs0p8);


Some("{\"version\":3,\"sources\":[\"src/thing/components/main.tsx\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";;;;;AAIA,OAAO,MAAM,sBAAQ,4CAIlB\"}")
== DIAGNOSTICS ==

[]
